@@ -83,6 +83,7 @@ from toolkit.api_parser.armis_centrix.armis_centrix import ArmisCentrixParser
 from toolkit.api_parser.perception_point_x_ray.perception_point_x_ray import PerceptionPointXRayParser
 from toolkit.api_parser.extrahop.extrahop import ExtrahopParser
 from toolkit.api_parser.hornetsecurity.hornetsecurity import HornetSecurityParser
+from toolkit.api_parser.ubika.ubika import UbikaParser
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
@@ -146,6 +147,7 @@ PARSER_LIST = {
     "perception_point_x_ray": PerceptionPointXRayParser,
     "extrahop": ExtrahopParser,
     "hornetsecurity": HornetSecurityParser,
+    "ubika": UbikaParser,
 }
 
 class ParserDoesNotExist(Exception):
